# personal-os

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  KANBAN.md  LICENSE  README.md  SOUL.md  pyproject.toml
.agents/skills/docx/: SKILL.md
.agents/skills/draft-content/: SKILL.md
.agents/skills/get-started/: SKILL.md
.agents/skills/pdf/: SKILL.md  forms.md
.agents/skills/pptx/: SKILL.md  editing.md
.agents/skills/review/: SKILL.md
.agents/skills/xlsx/: SKILL.md
.claude/commands/: draft-blog.md  draft-tweet.md  draft-youtube-script.md  review-week.md  review-year.md
.claude/skills/: blog-content  comment-suggesting  datavengers-proposal  docx  linkedin-content  pdf  pptx  skill-creator  upwork
.claude/skills/process-backlog/: ANTI_PATTERNS.md  SKILL.md
.claude/skills/review/: REVIEW_PATTERNS.md  SKILL.md
.claude/skills/setup-repo/: SKILL.md
.codex/commands/: draft-blog.md  draft-linkedin.md  draft-tweet.md  draft-youtube-script.md  update-voice.md
.codex/skills/: brand-guidelines  brand-guidelines-datavengers  fork-terminal  pthd  xlsx
.codex/skills/draft-content/: SKILL.md
.codex/skills/get-started/: SKILL.md
.codex/skills/process-backlog/: ANTI_PATTERNS.md  SYNC_RULES.md  (+1 more)
1-content/: CLAUDE.md
1-personal/: README-personal.md  README_personal.md
2-business/: README-business.md  README_business.md
2-business/02-outbound/: README.md
3-content/: README-content.md  README_content.md
3-content/01-blog/: README_blog.md
3-content/02-linkedin/: README_linkedin.md
3-content/_voice-examples/: README_voice-examples.md
3-content/_voice-samples/: README_voice-samples.md
3-personal/: CLAUDE.md  README-personal.md
3-personal/01-week-reviews/: TEMPLATE_week-review.md
3-personal/02-year-reviews/: TEMPLATE_year-review.md
_external/: CLAUDE.md
_external/pandego-parallel-thread-skill/: .gitignore  README.md
_system/: CLAUDE.md  README-system.md  README_system.md
_system/docs/: claude-code_best-practices.md
_system/scripts/: README.md  README_scripts.md  clean_all.py  clean_env.py  clean_git.py  setup_symlinks.py
_system/templates/: TEMPLATE_COMMAND.md  TEMPLATE_PROMPT.md  TEMPLATE_SKILL.md  TEMPLATE_voice.md
(+54 files in other folders)
