[project]
name = "personal-os"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "docx>=0.2.4",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "markitdown[pptx]>=0.1.4",
    "mcp>=1.25.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = true

[project.scripts]
clean = "_system.scripts.clean_all:main"
clean-git = "_system.scripts.clean_git:main"
clean-env = "_system.scripts.clean_env:main"
setup-symlinks = "_system.scripts.setup_symlinks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["_system"]
