[project]
name = "personal-os"
version = "0.1.0"
description = "Personal OS — runtime-agnostic AI workspace for content, business, and personal workflows."
requires-python = ">=3.14"
dependencies = [
    "defusedxml>=0.7.1",
    "docx>=0.2.4",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "markitdown[pptx]>=0.1.4",
    "mcp>=1.25.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["_system"]
